<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="#F7F7F7"
        tools:context=".activities.RadioActivity">

    <LinearLayout
            android:id="@+id/radio_type_select_zone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFFFFF">
        <TextView
                android:id="@+id/local_province_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/jiangsu_province"/>
        <View
                android:layout_width="2px"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:background="@color/grey"/>
        <TextView
                android:id="@+id/country_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/country_radio"/>
        <View
                android:layout_width="2px"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:background="@color/grey"/>
        <TextView
                android:id="@+id/province_city_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/province_city_radio"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/radio_type_select_zone"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:text="@string/recommend_radio"
                  android:textSize="15sp"
                  android:textColor="@color/black"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommend_radio_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</RelativeLayout>